# tndtlfeogkrry-downloader

./: .gitignore  README.md  TODO.md  electron-builder.yml  electron.vite.config.ts  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
docs/: README.md  architecture.md  features.md  ipc-api.md  workflows.md
docs/superpowers/plans/: 2026-03-26-tauri-migration.md
docs/superpowers/specs/: 2026-03-26-tauri-migration-design.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auth.rs  commands.rs  config.rs  download.rs  gemini.rs  history.rs  lms.rs  main.rs  media.rs  state.rs
src/main/: index.ts
src/main/ipc/: courses.ts  download.ts  history.ts  index.ts  settings.ts  transcribe.ts  update.ts
src/main/services/: gemini.ts  history.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html
src/renderer/src/: App.vue
src/renderer/src/assets/: main.css
src/renderer/src/components/courses/: CourseCard.vue  CourseList.vue
src/renderer/src/components/layout/: AppHeader.vue  Sidebar.vue  StatusMessage.vue
src/renderer/src/components/login/: LoginScreen.vue
src/renderer/src/components/videos/: FormatToggle.vue  (+3 more)
src/renderer/src/composables/: useDownloader.ts  useLibrary.ts  useTheme.ts  useTranscriber.ts
src/renderer/src/types/: index.ts
src/shared/: channels.ts  config.ts  types.ts
ui/: index.html
ui/js/: api.js  app.js
ui/js/components/: courseList.js  downloadProgress.js  login.js  settings.js  videoList.js  wikiList.js
ui/js/utils/: dom.js  format.js
ui/styles/: main.css
(+2 files in other folders)
