[package]
name = "ssu-lms-downloader"
version = "2.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
reqwest = { version = "0.12", features = ["cookies", "stream", "json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.37"
symphonia = { version = "0.5", default-features = false, features = ["isomp4", "aac"] }
base64 = "0.22"
unicode-normalization = "0.1"
regex-lite = "0.1"
urlencoding = "2"
futures-util = "0.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
